--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -2,4 +2,5 @@
 @tailwind components;
 @tailwind utilities;
 
-
+/* globals.css or styles.css */
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&family=Poppins:wght@400;700&display=swap");
